add index.html and style.css

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,30 @@
 {
-    "git.ignoreLimitWarning": true
+    "git.ignoreLimitWarning": true,
+    "cSpell.words": [
+        "Accès",
+        "actuellement",
+        "Adresse",
+        "Aidez",
+        "Alerte",
+        "animaux",
+        "aucune",
+        "banniere",
+        "Chien",
+        "Coeur",
+        "Compagnon",
+        "espace",
+        "J'adopte",
+        "justifie",
+        "obligatoire",
+        "rapide",
+        "Rechercher",
+        "recherchez",
+        "saturé",
+        "signale",
+        "sont",
+        "Stylisation",
+        "tablette",
+        "ville",
+        "vous"
+    ]
 }
